[package]
name = "uu"
version = "0.2.0"
description = "A tool for inspecting Unicode text"
authors = ["Jake Low <hello@jakelow.com>"]
homepage = "https://github.com/jake-low/uu"
repository = "https://github.com/jake-low/uu"
license = "ISC"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1"
clap = { version = "4", features = ["derive", "cargo"] }
csv = "1"
itertools = "0.8"
tabwriter = "1"
unic = "0.9"
utf-8 = "0.7"
